--- a/app/src/main/res/drawable/seekbar_progress.xml
+++ b/app/src/main/res/drawable/seekbar_progress.xml
@@ -1,8 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background"
-        android:drawable="@drawable/progress_background"
-        android:dither="true"/>
+        android:gravity="center_vertical|fill_horizontal">
+        <shape android:shape="rectangle"
+            android:tint="#ffffff">
+            <corners android:radius="10dp"/>
+            <size android:height="20dp" />
+            <solid android:color="#ffffff" />
+        </shape>
+    </item>
     <item android:id="@android:id/progress"
-        android:drawable="@drawable/seekbar_clip"/>
+        android:gravity="center_vertical|fill_horizontal">
+        <scale android:scaleWidth="100%">
+            <selector>
+                <item android:state_enabled="false"
+                    android:drawable="@android:color/transparent" />
+                <item>
+                    <shape android:shape="rectangle"
+                        android:tint="@color/colorAccent">
+                        <corners android:radius="10dp"/>
+                        <size android:height="20dp" />
+                        <solid android:color="@color/colorAccent" />
+                    </shape>
+                </item>
+            </selector>
+        </scale>
+    </item>
 </layer-list>
