--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -9,13 +9,13 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        class="com.example.nikitarykov.justplayer.PlaylistFragment"/>
+        class="com.example.nikitarykov.justplayer.ui.PlaylistFragment"/>
 
     <fragment
         android:id="@+id/player_fragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        class="com.example.nikitarykov.justplayer.PlayerFragment"/>
+        class="com.example.nikitarykov.justplayer.ui.PlayerFragment"/>
 
 </LinearLayout>
