--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nikitarykov.justplayer.PlaylistFragment">
+    tools:context="com.example.nikitarykov.justplayer.ui.PlaylistFragment">
 
     <ListView
         android:id="@+id/audio_list"
