--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -41,12 +41,30 @@
             android:background="@null"/>
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/audio_cover"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@drawable/icon_music"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/audio_cover"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/icon_music"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dip"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:maxLines = "200"
+            android:scrollbars = "vertical"
+            android:padding="12dip"
+            android:background="#00000000"
+            android:textColor="#ffffffff"/>
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,8 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:text="00:00"/>
+            android:textStyle="bold"/>
 
         <SeekBar
             android:id="@+id/progress_bar"
@@ -72,7 +89,9 @@
             android:layout_marginRight="30dp"
             android:layout_weight="1"
             android:progressDrawable="@drawable/seekbar_progress"
-            android:thumb="@drawable/seekbar_thumb" />
+            android:background="@null"
+            android:splitTrack="false"
+            android:thumbTint="@android:color/transparent"/>
 
         <TextView
             android:id="@+id/total_duration"
